--- a/Lab2/site3/index.html
+++ b/Lab2/site3/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </head>
 <body>
 <h1>Lab 3</h1>
